--- a/style.css
+++ b/style.css
@@ -27,3 +27,45 @@ h3{
     border-style: solid;
     border-width: 2px;
 }
+
+.logo_container
+{
+    height: 100%;
+    display: table;
+    float: left;
+}
+#cyprus 
+{
+    background-image: url("cardbg.jpg");
+    padding: 30px 0px;
+    background-attachment: fixed;
+}
+.cim p
+{
+    font-weight: bold;
+    font-size: 60px;
+    text-align: center;
+    padding: 25px 0px;
+}
+.card-body 
+{
+    box-shadow: 0 0 20px 7px rgba(0,0,0,0.1);
+}
+.card 
+{
+    margin: 20px 10px;
+}
+#ora
+{
+    position: absolute;
+    color: black;
+    font-size: 30px;
+    background-color: lightgrey;
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 4px 3px 4px 0px;
+    right: 1%;
+    top: 5%;
+    transform: translateX(-50%) translateY(-50%);
+    margin: 0;
+}
