--- a/style.css
+++ b/style.css
@@ -69,3 +69,18 @@ h3{
     transform: translateX(-50%) translateY(-50%);
     margin: 0;
 }
+#zaszlo
+{
+    position: absolute;
+    width: 250px;
+    height: 150px;
+    border: 3px solid black;
+    border-radius: 30px;
+    left: 1%;
+    top: 2%;
+}
+
+#teknos
+{
+    height: 215px;
+}
