--- a/style.css
+++ b/style.css
@@ -29,7 +29,13 @@ h3{
     border-style: solid;
     border-width: 2px;
 }
-
+.header
+{
+    width: 100%;
+    height: 100px;
+    display: block;
+    background-color: #101010;
+}
 .logo_container
 {
     height: 100%;
